--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft.AspNetCore.SpaProxy": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionString" : {
+    "MyConnection" : "Server=CYG444\\SQLEXPRESS; Initial Catalog=CG_TechPro; Integrated Security=true; TrustServerCertificate=true;"
   }
 }
