Integrate backend with db

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,7 +7,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionString" : {
+  "ConnectionStrings" : {
     "MyConnection" : "Server=CYG444\\SQLEXPRESS; Initial Catalog=CG_TechPro; Integrated Security=true; TrustServerCertificate=true;"
   }
 }
