--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -38,6 +38,7 @@
     "@angular/compiler-cli": "^15.2.8",
     "@types/jasmine": "~4.3.1",
     "@types/jasminewd2": "~2.0.10",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^18.16.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.2",
@@ -50,6 +51,5 @@
   "overrides": {
     "autoprefixer": "10.4.5",
     "webpack": "5.81.0"
-  },
-  "optionalDependencies": {}
+  }
 }
